fixed alignments and responsiveness

--- a/angular-material/angular-material-ui/src/app/courses-card-list/courses-card-list.component.css
+++ b/angular-material/angular-material-ui/src/app/courses-card-list/courses-card-list.component.css
@@ -1,16 +1,18 @@
 mat-card img{
   object-fit: cover; /*this makes the image in src fit to the size specified below*/
   width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
-  height: 100%;
+  height: 80%;
+  align-content: center;
 }
 
 .course-card {
   margin: 20px 10px;
+  width: fit-content;
   max-width:474px;
 }
 
 .course-actions {
-    display: flex;
+  display: flex;
   justify-content: center;
 }
 
@@ -27,6 +29,14 @@ mat-card img{
 .long-description {
   min-height: 50px;
   max-width: 442px;
+}
+
+mat-card-title {
+  padding: 10px;
+  display: flow-root !important;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 mat-card-content p{
