--- a/angular-material/angular-material-ui/src/app/home/home.component.scss
+++ b/angular-material/angular-material-ui/src/app/home/home.component.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 60px;
+  margin-top: 5px;
 }
 
 h2 {
